@@ -107,7 +107,6 @@ pygments_style = 'sphinx'
 html_theme = 'sphinx_rtd_theme'
 
 html_theme_options = {
-    'logo_only': False,
     'display_version': True,
     'prev_next_buttons_location': 'bottom',
     'style_external_links': False,
